# docker-dev

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.bmad-core/: core-config.yaml.bak  install-manifest.yaml
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.gemini/commands/: bmad.toml
dev/: Dockerfile  pyproject.toml
docs/: README.md  brainstorming-session-results.md  brief.md  cli-ux-spec.md
docs/architecture/: 1-introduction.md  10-frontend-architecture-cli.md  11-backend-architecture-agentic-toolchain.md  12-unified-project-structure.md  13-development-workflow-revised.md  14-deployment-architecture.md  15-security-performance-and-reliability.md  16-testing-strategy.md  18-error-handling-strategy.md  19-monitoring-and-support.md  2-high-level-architecture-revised.md  4-data-models-revised.md  5-api-specification.md  6-components-revised.md  7-external-apis-revised.md  8-core-workflows.md  9-database-schema.md  api-specification.md  backend-architecture-agentic-toolchain.md  coding-standards.md  components-revised.md  core-workflows.md  data-models-revised.md  database-schema.md  deployment-architecture.md  development-workflow-revised.md  error-handling-strategy.md  external-apis-revised.md  frontend-architecture-cli.md  index.md  (+7 more)
src/: config.ts  docker.ts  generator.ts  index.ts  installer.ts  prompts.ts
template/: .bmad-flattenignore  Makefile.template  docker-compose.template.yaml
template/dev/: Dockerfile  dev-proxy.sh  pyproject.toml
(+45 files in other folders)
