[tool.poetry]
name = "docker-dev"
version = "1.0.0"
description = "Docker based development environment."
authors = ["Ryan Balch <ryan@balch.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
websockets = "*"

[tool.poetry.group.dev.dependencies]
debugpy = "*"
google-adk = "*"
httpx = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
